Add missing os.

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,9 +10,11 @@ jobs:
           - name: 'check'
             python: '3.9'
             tox_env: 'check'
+            os: 'linux-latest'
           - name: 'docs'
             python: '3.9'
             tox_env: 'docs'
+            os: 'linux-latest'
           - name: 'linux/x64/native:py27-pure-cover'
             python: '2.7'
             python_arch: 'x64'
