Remove bogus tag.

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -55,35 +55,35 @@ jobs:
             python_arch: 'x64'
             tox_env: 'py27-pure-nocov'
             cibw_arch: 'native'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'linux-latest'
           - name: 'linux/x64/aarch64:py27-pure-nocov'
             python: '2.7'
             python_arch: 'x64'
             tox_env: 'py27-pure-nocov'
             cibw_arch: 'aarch64'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'linux-latest'
           - name: 'windows/x64/native:py27-pure-nocov'
             python: '2.7'
             python_arch: 'x64'
             tox_env: 'py27-pure-nocov'
             cibw_arch: 'native'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'windows-latest'
           - name: 'windows/x86/native:py27-pure-nocov'
             python: '2.7'
             python_arch: 'x86'
             tox_env: 'py27-pure-nocov'
             cibw_arch: 'native'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'windows-latest'
           - name: 'macos/x64/native:py27-pure-nocov'
             python: '2.7'
             python_arch: 'x64'
             tox_env: 'py27-pure-nocov'
             cibw_arch: 'native'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'macos-latest'
           - name: 'linux/x64/native:py27-cython-cover'
             python: '2.7'
@@ -125,35 +125,35 @@ jobs:
             python_arch: 'x64'
             tox_env: 'py27-cython-nocov'
             cibw_arch: 'native'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'linux-latest'
           - name: 'linux/x64/aarch64:py27-cython-nocov'
             python: '2.7'
             python_arch: 'x64'
             tox_env: 'py27-cython-nocov'
             cibw_arch: 'aarch64'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'linux-latest'
           - name: 'windows/x64/native:py27-cython-nocov'
             python: '2.7'
             python_arch: 'x64'
             tox_env: 'py27-cython-nocov'
             cibw_arch: 'native'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'windows-latest'
           - name: 'windows/x86/native:py27-cython-nocov'
             python: '2.7'
             python_arch: 'x86'
             tox_env: 'py27-cython-nocov'
             cibw_arch: 'native'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'windows-latest'
           - name: 'macos/x64/native:py27-cython-nocov'
             python: '2.7'
             python_arch: 'x64'
             tox_env: 'py27-cython-nocov'
             cibw_arch: 'native'
-            cibw_build: 'cp27-cp27mu*'
+            cibw_build: 'cp27-*'
             os: 'macos-latest'
           - name: 'linux/x64/native:py36-pure-cover'
             python: '3.6'
