Bunch more fixing.

--- a/ci/templates/.github/workflows/github-actions.yml
+++ b/ci/templates/.github/workflows/github-actions.yml
@@ -83,9 +83,10 @@ jobs:
       env:
         CIBW_ARCHS: '{{ '${{ matrix.cibw_arch }}' }}'
         CIBW_BUILD: '{{ '${{ matrix.cibw_build }}' }}'
-        CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
+        CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux1'
+        CIBW_BUILD_VERBOSITY: '1'
         CIBW_TEST_REQUIRES: 'tox tox-direct'
-        CIBW_TEST_COMMAND: 'cd {project}; tox --skip-pkg-install --direct-yolo -e {{ '${{ matrix.tox_env }}' }} -v'
+        CIBW_TEST_COMMAND: 'cd {project} && tox --skip-pkg-install --direct-yolo -e {{ '${{ matrix.tox_env }}' }} -v'
 
     - name: regular build and test
       if: '!matrix.cibw_build'
@@ -93,7 +94,7 @@ jobs:
 
     - name: check wheel
       if: 'matrix.cibw_build'
-      run: '{{ 'twine check ${{ matrix.wheel_path }}/*.whl' }}'
+      run: 'twine check wheelhouse/*.whl'
     - name: upload wheel
       uses: actions/upload-artifact@v2
       if: 'matrix.cibw_build'
